--- a/events.html
+++ b/events.html
@@ -16,16 +16,16 @@
   <body>
 <!-- NAVIGATION: ------------------------------------------------------------------------->
     <nav class="navigation">
-      <div id="logo"><a href="home"><img src="images/logo/logo.png" alt="Logo"></a></div>
+      <div id="logo"><a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a></div>
       <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle"/>
       <div class="menu">
-        <a href="home">HOME</a>
-        <a id="active" href="events">EVENTS</a>
-        <a href="exhibitions">EXHIBITONS</a>
-        <a href="visit">VISIT</a>
-        <a href="involved">GET INVOLVED</a>
-        <a href="about">ABOUT US</a>
+        <a href="index.html">HOME</a>
+        <a id="active" href="events.html">EVENTS</a>
+        <a href="exhibitions.html">EXHIBITONS</a>
+        <a href="visit.html">VISIT</a>
+        <a href="involved.html">GET INVOLVED</a>
+        <a href="about.html">ABOUT US</a>
       </div>
     </nav>
 <!-- HEADER: ----------------------------------------------------------------------------->
