Replacing home with index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Technical: -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS: -->
     <link rel="stylesheet" href="css/master.css">
+
+    <!-- SEO: -->
     <meta name="author" content="Emilie H. K. Tonnessen">
     <meta name="description" content="
       Come join us at the Community Science Museum where we’re committed
@@ -11,21 +16,23 @@
     <meta name="keywords" content="
       community science museum explore kids kid children family learn teach
       fun exciting">
+
+      <!-- Page title: -->
     <title>Community Science Museum</title>
   </head>
   <body>
 <!-- NAVIGATION: ------------------------------------------------------------------------->
     <nav class="navigation">
-      <div id="logo"><a href="home"><img src="images/logo/logo.png" alt="Logo"></a></div>
+      <div id="logo"><a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a></div>
       <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle"/>
       <div class="menu">
-        <a id="active" href="home">HOME</a>
-        <a href="events">EVENTS</a>
-        <a href="exhibitions">EXHIBITONS</a>
-        <a href="visit">VISIT</a>
-        <a href="involved">GET INVOLVED</a>
-        <a href="about">ABOUT US</a>
+        <a id="active" href="index.html">HOME</a>
+        <a href="events.html">EVENTS</a>
+        <a href="exhibitions.html">EXHIBITONS</a>
+        <a href="visit.html">VISIT</a>
+        <a href="involved.html">GET INVOLVED</a>
+        <a href="about.html">ABOUT US</a>
       </div>
     </nav>
 <!-- HEADER: ----------------------------------------------------------------------------->
@@ -34,27 +41,35 @@
       <img id="desktop-header" src="images/pages/home/desktop-header.jpg" alt="Header with Headline and banner showing the phases of a red moon">
     </header>
 <!-- MAIN CONTENT: ----------------------------------------------------------------------->
-    <!-- SECTION: CALL TO ACTION -->
+    
+<!-- SECTION: CALL TO ACTION -->
     <div class="call-to-action">
       <div class="home-grid-container">
         <div class="home-grid1">
           <h2>OPEN 6 DAYS A WEEK</h2>
-          <a href="visit">PlAN A VISIT</a>
+          <a href="visit.html">
+            <button class="button">
+              PLAN A VISIT
+            </button>
+            
+          </a>
         </div>
         <div class="home-grid2">
           <h2>EXCITING EVENTS</h2>
-          <a href="events">CHECK OUT</a>
+          <a href="events.html">CHECK OUT</a>
         </div>
         <div class="home-grid3">
           <h2>EXTRAORDINARY EXHIBITIONS</h2>
-          <a href="exhibitions">WHAT TO SEE AND DO</a>
+          <a href="exhibitions.html">WHAT TO SEE AND DO</a>
         </div>
         <div class="home-grid4">
           <h2>FREE ENTRY - SUPPORT US</h2>
-          <a href="involved">GET INVOLVED</a>
+          <a href="involved.html">GET INVOLVED</a>
         </div>
       </div>
     </div>
+
+
     <!-- SECTION: TEXT CONTENT/DESCRIPTION -->
     <div class="dark-background">
       <div class="description">
