--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
   <body>
 <!-- NAVIGATION: ------------------------------------------------------------------------->
     <nav class="navigation">
+      <div id="logo"><a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a></div>
       <label for="toggle">&#9776;</label>
       <input type="checkbox" id="toggle"/>
       <div class="menu">
