CSS Grid + BEM writing
Adding more margin and paddings as the feedback stated. Adding CSS Grid to main content and minimizing code. Writing classes in the BEM Style

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -38,86 +38,105 @@
       <h1>Exhibitions</h1>
     </header>
 <!-- MAIN: ------------------------------------------------------------------------------->
-    <main id="exhibitions">
-      <div class="exhibitions-grid-container">
-        <div class="exhibitions-grid1">
-          <img src="images/pages/exhibitions/cosmology.jpg" alt="A man looking into the sky that is filled with stars">
-          <h2>COSMOLOGY</h2>
-          <p>
+    <main class="main main--grid">
+
+      <!-- Cosmology: -->
+      <section class="main__section">
+        <img src="images/pages/exhibitions/cosmology.jpg" alt="A man looking into the sky that is filled with stars">
+        <div class="main__section--padding">
+          <h2 class="main__section__h2">COSMOLOGY</h2>
+          <p class="main__section__p">
             Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’,
             explores the night sky and what we can see and know about the universe around us.
             We’ll locate the various constellations and galaxies that can be seen and learn a
             bit about the early navigators who used the stars to travel by.
           </p>
-          <p class="last-p">
+          <p class="main__section__p">
             Follow the journey of our solar exploration: from early Arab traders, to Galileo’s
             telescope, to the latest exploration of the planets in our solar system.
           </p>
-        </div>
-        <div class="exhibitions-grid2">
-          <img src="images/pages/exhibitions/evolution.jpg" alt="The life stages of a butterfly">
-          <h2>EVOLUTION</h2>
-          <p>
+          </div>
+      </section>
+
+      <!-- Evolution: -->
+      <section class="main__section">
+        <img src="images/pages/exhibitions/evolution.jpg" alt="The life stages of a butterfly">
+        <div class="main__section--padding">
+          <h2 class="main__section__h2">EVOLUTION</h2>
+          <p class="main__section__p">
             For centuries, philosophers and scientists have wrestled with the question of our
             origins. Where do we come from and how did we get here? Since Darwin proposed his
             theory of evolution we have had a framework for exploring and understanding our
             place in this world.
           </p>
-          <p class="last-p">
+          <p class="main__section__p">
             Discover the origins of life on this planet and how the species we know today
             have evolved our time. You can also take some time to meet a few of the creatures
             who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of
             dinosaurs too.
           </p>
-        </div>
-        <div class="exhibitions-grid3">
-          <img src="images/pages/exhibitions/ecology.jpg" alt="A forest seen from the ground and up">
-          <h2>ECOLOGY</h2>
-          <p>
+          </div>
+      </section>
+
+      <!-- Ecology: -->
+      <section class="main__section">
+        <img src="images/pages/exhibitions/ecology.jpg" alt="A forest seen from the ground and up">
+        <div class="main__section--padding">
+          <h2 class="main__section__h2">ECOLOGY</h2>
+          <p class="main__section__p">
             As we learn more and more of the impact humans are having on the planet,
             the more important it becomes that scientists explore how to create a
             sustainable future not just for humans but for the whole planet.
           </p>
-          <p class="last-p">
+          <p class="main__section__p">
             In our ecology section of the museum, we unpack the dangers we currently
             face including global warming, extinction of species, and pollution. But
             we also focus on the positive ways we can all contribute to a brighter future.
           </p>
         </div>
-        <div class="exhibitions-grid4">
-          <img src="images/pages/exhibitions/robotics.jpg" alt="A pink robot with eyes">
-          <h2>ROBOTICS AND AI</h2>
-          <p class="last-p">
+      </section>
+
+      <!-- Robotics and AI -->
+      <section class="main__section">
+        <img src="images/pages/exhibitions/robotics.jpg" alt="A pink robot with eyes">
+        <div class="main__section--padding">
+          <h2 class="main__section__h2">ROBOTICS AND AI</h2>
+          <p class="main__section__p">
             The information revolution is here and robotics and artificial intelligence
             are the science of the future. From useful home applications of AI to
             industrial uses of robotics, the future is here. You can even say hello
             and shake the hand of Rob the Robot.
           </p>
         </div>
-        <div class="exhibitions-grid5">
-          <img src="images/pages/exhibitions/biology.jpg" alt="Medicine plants growing in glass botles">
-          <h2>BIOLOGY AND MEDICINE</h2>
-          <p>
+      </section>
+
+      <!-- Biology and Medicine: -->
+      <section class="main__section">
+        <img src="images/pages/exhibitions/biology.jpg" alt="Medicine plants growing in glass botles">
+        <div class="main__section--padding">
+          <h2 class="main__section__h2">BIOLOGY AND MEDICINE</h2>
+          <p class="main__section__p">
             From micro-organisms to the human body, major breakthroughs in biology are
             offering us unique insights into the great wonders of the tiny world.
           </p>
-          <p>
+          <p class="main__section__p">
             For many people their life expectancy is much longer and their quality of
             life much improved, thanks to the growth of our understanding of medicine.
             Over a series of exhibits we explore the history of medicine and take a
             look at some major breakthroughs including the discovery of penicillin and
             the first heart transplant.
           </p>
-          <p class="last-p">
+          <p class="main__section__p">
             Many of our great medicinal discoveries have come not only from the lab,
             but also from observing animals in the wild. Often our fellow creatures
             have beat us to it.
           </p>
         </div>
-        <div class="exhibitions-grid6">
-          <img src="images/pages/exhibitions/exhibitions.jpg" alt="Museum hall with dinosaur skeletons">
-        </div>
-      </div>
+      </section>
+
+      <!-- Image: -->
+      <section class="main__section main__section--background-img main__section--dinosaur-img"></section>
+      
     </main>
 <!-- FOOTER: ----------------------------------------------------------------------------->
     <footer>
@@ -132,13 +151,13 @@
         <div>
           <div class="footer-grid1">
             <h4 class="footer-title">CONTACT INFORMATION:</h4>
-            <p>+47 123 45 678</p>
+            <p class="main__section__p">+47 123 45 678</p>
             <a id="footer-mail" href="mailto: abc@example.com">contact.museum@mail.com</a>
           </div>
           <div class="footer-grid2">
             <H4 class="footer-title">LOCATION</H4>
-            <p>Myntgata 3</p>
-            <p>0151 Oslo</p>
+            <p class="main__section__p">Myntgata 3</p>
+            <p class="main__section__p">0151 Oslo</p>
           </div>
         </div>
         <div class="footer-grid3">
@@ -176,7 +195,7 @@
         </div>
       </div>
       <div class="footer-grid4">
-        <p>&copy; 2019 Community Science Museum - All rights reserved</p>
+        <p class="main__section__p">&copy; 2019 Community Science Museum - All rights reserved</p>
       </div>
     </footer>
 <!-- END: --------------------------------------------------------------------------------->
