--- a/about.html
+++ b/about.html
@@ -34,63 +34,66 @@
       <h1>About Us</h1>
     </header>
 <!-- MAIN: ------------------------------------------------------------------------------->
-    <main id="about">
-      <div class="about-grid-container">
-        <div class="about-grid1">
+    <main class="main main--grid">
+      
+      <!-- Kids: -->
+        <section class="main__section main__section--kids">
           <img src="images/pages/about/kids.jpg" alt="Illustration of kids playing">
-          <h2>FOR KIDS</h2>
-          <p>
-            Are you a young person looking to learn more about science? Come on down
-            to our museum, there’s plenty to see and do.
-          </p>
-          <p>
-            You can learn about Newtonian physics from our bumper swing, or why not
-            travel back in time and meet our resident Woolly Mammoth? Our exhibits are
-            designed to be accessible for interested minds, so make sure you come ready
-            to learn and explore.
-          </p>
-          <p>
-            We also have the Young Stars club which meets once a week on a Saturday
-            between 10:00 and 13:00 where you’ll get to explore and experiment with
-            our team of experts.
-          </p>
-          <p class="last-p">
-            During the school holidays we run special holiday clubs where you can join
-            other children your age to go on a journey of discovery. Each holiday we
-            pick a new theme to explore. To find out more about the holiday club and
-            how you can join, send us a <a href="mailto: abc@example.com">message</a>.
-          </p>
-        </div>
-        <div class="about-grid2">
+          <div class="main__section--padding">
+            <h2 class="main__section__h2">FOR KIDS</h2>
+            <p class="main__section__p">
+              Are you a young person looking to learn more about science? Come on down
+              to our museum, there’s plenty to see and do.
+            </p>
+            <p class="main__section__p">
+              You can learn about Newtonian physics from our bumper swing, or why not
+              travel back in time and meet our resident Woolly Mammoth? Our exhibits are
+              designed to be accessible for interested minds, so make sure you come ready
+              to learn and explore.
+            </p>
+            <p class="main__section__p">
+              We also have the Young Stars club which meets once a week on a Saturday
+              between 10:00 and 13:00 where you’ll get to explore and experiment with
+              our team of experts.
+            </p>
+            <p class="main__section__p">
+              During the school holidays we run special holiday clubs where you can join
+              other children your age to go on a journey of discovery. Each holiday we
+              pick a new theme to explore. To find out more about the holiday club and
+              how you can join, send us a <a class="main__section__p__link" href="mailto: abc@example.com">message</a>.
+            </p>
+          </div>
+        </section>
+
+        <!-- Teachers + Researchers: -->
+        <section class="main__section main__section--teachers">
           <img src="images/pages/about/teacher.jpg" alt="Illustration of a teacher teaching">
-          <h2>FOR TEACHERS</h2>
-          <p>
-            As a community-driven museum, we want to work with schools to create places
-            of learning and exploring. Our team are on hand to give your students guided
-            tours of the museum, teach them in our learning laboratory, and provide
-            great video presentations that will excite and inspire them.
-          </p>
-          <p class="last-p">
-            Please get in touch with us <a href="mailto: abc@example.com">here</a> to find out more about our facilities and
-            to arrange a time to bring your students through for a visit.
-          </p>
-          <h2>FOR RESEARCHERS</h2>
-          <p class="last-p">
-            Are you looking to get involved with our team of researchers and academics?
-            Our museum offers various ways for you to use our resources and contribute
-            towards them. We have online records, laboratory space, and a working
-            relationship with a number of universities around the country.
-          </p>
-        </div>
-        <div class="about-grid3">
-          <img class="mobile-images" src="images/pages/about/mobile-about.jpg" alt="Snowy mountain with stars on the night sky">
-          <img class="desktop-images" src="images/pages/about/desktop-about.jpg" alt="Snowy mountain with stars on the night sky">
-        </div>
-      </div>
+          <div class="main__section--padding">
+            <h2 class="main__section__h2">FOR TEACHERS</h2>
+            <p class="main__section__p">
+              As a community-driven museum, we want to work with schools to create places
+              of learning and exploring. Our team are on hand to give your students guided
+              tours of the museum, teach them in our learning laboratory, and provide
+              great video presentations that will excite and inspire them.
+            </p>
+            <p class="main__section__p">
+              Please get in touch with us <a class="main__section__p__link" href="mailto: abc@example.com">here</a> to find out more about our facilities and
+              to arrange a time to bring your students through for a visit.
+            </p>
+            <h2 class="main__section__h2">FOR RESEARCHERS</h2>
+            <p class="main__section__p">
+              Are you looking to get involved with our team of researchers and academics?
+              Our museum offers various ways for you to use our resources and contribute
+              towards them. We have online records, laboratory space, and a working
+              relationship with a number of universities around the country.
+            </p>
+          </div>
+        </section>
+
+        <!-- Image -->
+        <section class="main__section main__section--background-img main__section--jar-img"></section>
+      
     </main>
-    <!-- SECTION: END IMAGE -->
-    <img class="tablet-images" src="images/pages/about/tablet-about.jpg" alt="Light inside a glassjar">
-    <img class="laptop-images" src="images/pages/about/laptop-about.jpg" alt="Light inside a glassjar">
 <!-- FOOTER: ----------------------------------------------------------------------------->
     <footer>
       <div class="footer-grid-container-socialmedia">
@@ -104,13 +107,13 @@
         <div>
           <div class="footer-grid1">
             <h4 class="footer-title">CONTACT INFORMATION</h4>
-            <p>+47 123 45 678</p>
+            <p class="main__section__p">+47 123 45 678</p>
             <a id="footer-mail" href="mailto: abc@example.com">contact.museum@mail.com</a>
           </div>
           <div class="footer-grid2">
             <H4 class="footer-title">LOCATION</H4>
-            <p>Myntgata 3</p>
-            <p>0151 Oslo</p>
+            <p class="main__section__p">Myntgata 3</p>
+            <p class="main__section__p">0151 Oslo</p>
           </div>
         </div>
         <div class="footer-grid3">
@@ -148,7 +151,7 @@
         </div>
       </div>
       <div class="footer-grid4">
-        <p>&copy; 2019 Community Science Museum - All rights reserved</p>
+        <p class="main__section__p">&copy; 2019 Community Science Museum - All rights reserved</p>
       </div>
     </footer>
 <!-- END: --------------------------------------------------------------------------------->
