--- a/events.html
+++ b/events.html
@@ -33,45 +33,51 @@
       <h1>Events</h1>
     </header>
 <!-- MAIN: ------------------------------------------------------------------------------->
-    <main id="events">
+    <main class="main main--grid">
       <!-- SECTION: EVENTS CONTENT -->
-      <div class="events-grid-container">
-        <div class="events-grid1">
+      
+        <section class="main__section">
           <img src="images/pages/events/night.jpg" alt="Skeleton of a Mammoth">
-          <h2>Night in the Museum</h2>
-          <p class="last-p">
-            Get your family together for an exciting night in the museum as you sleep
-            over beside dinosaurs and science displays. Bring your own sleeping bag
-            and get ready to rough it as we go exploring the wonders of science.
-          </p>
-        </div>
-        <div class="events-grid2">
+          <div class="main__section--padding">
+            <h2 class="main__section__h2">Night in the Museum</h2>
+            <p class="main__section__p">
+              Get your family together for an exciting night in the museum as you sleep
+              over beside dinosaurs and science displays. Bring your own sleeping bag
+              and get ready to rough it as we go exploring the wonders of science.
+            </p>
+          </div>
+        </section>
+
+        <section class="main__section">
           <img src="images/pages/events/energy.jpg" alt="Female professor opperating a machine">
-          <h2>Energetica Exhibition on Loan</h2>
-          <p class="last-p">
-            On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition
-            is coming to the Community Science Museum. It’s a series of installations
-            that allow visitors to experience the power of the elements as we harness
-            them. From solar energy powering lighting, to ‘Wind Island’ that shows how
-            turbines are able to use and control wind to create power.
-          </p>
-        </div>
-        <div class="events-grid3">
+          <div class="main__section--padding">
+            <h2 class="main__section__h2">Energetica Exhibition on Loan</h2>
+            <p class="main__section__p">
+              On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition
+              is coming to the Community Science Museum. It’s a series of installations
+              that allow visitors to experience the power of the elements as we harness
+              them. From solar energy powering lighting, to ‘Wind Island’ that shows how
+              turbines are able to use and control wind to create power.
+            </p>
+          </div>
+        </section>
+
+        <section class="main__section">
           <img src="images/pages/events/professor.jpg" alt="Professor Sheila Widnall">
-          <h2>Visiting Professor of Aeronautics</h2>
-          <p class="last-p">
-            It is our pleasure to announce that Prof Sheila Widnall from the
-            Massachusetts Institute of Technology will be delivering 3 lectures on
-            the development of aeronautics and where the future lies in this exciting
-            ‘space’.
-          </p>
-        </div>
-        <div class="events-grid4">
-          <img class="mobile-images" src="images/pages/events/mobile-elephant.jpg" alt="Elephant Statue in a hall">
-          <img class="tablet-images" src="images/pages/events/tablet-elephant.jpg" alt="Elephant Statue in a hall">
-          <img class="laptop-images" src="images/pages/events/laptop-elephant.jpg" alt="Elephant Statue in a hall">
-        </div>
-      </div>
+          <div class="main__section--padding">
+            <h2 class="main__section__h2">Visiting Professor of Aeronautics</h2>
+            <p class="main__section__p">
+              It is our pleasure to announce that Prof Sheila Widnall from the
+              Massachusetts Institute of Technology will be delivering 3 lectures on
+              the development of aeronautics and where the future lies in this exciting
+              ‘space’.
+            </p>
+          </div>
+        </section>
+
+        <section class="main__section main__section--background-img main__section--elephant-img"></section>
+
+      
     </main>
     <!-- SECTION: END IMAGE-->
     <img class="desktop-images" src="images/pages/events/desktop-elephant.jpg" alt="Elephant Statue in a hall">
