--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
       </div>
     </nav>
 <!-- HEADER: ----------------------------------------------------------------------------->
-    <header class="dark-background">
-      <img id="mobile-header" src="images/pages/home/mobile-header.png" alt="Header with Headline and banner showing the phases of a red moon">
-      <img id="desktop-header" src="images/pages/home/desktop-header.jpg" alt="Header with Headline and banner showing the phases of a red moon">
+    <header class="header header--home">
+      <div class="header__block">
+        <h1 class="header__block__h1">community science museum</h1>
+      </div>
     </header>
 <!-- MAIN CONTENT: ----------------------------------------------------------------------->
     
