--- a/visit.html
+++ b/visit.html
@@ -18,20 +18,25 @@
     <title>CSM | Visit</title>
   </head>
   <body>
-<!-- NAVIGATION: ------------------------------------------------------------------------->
-    <nav class="navigation">
-      <div id="logo"><a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a></div>
-      <label for="toggle">&#9776;</label>
-      <input type="checkbox" id="toggle"/>
-      <div class="menu">
-        <a href="index.html">HOME</a>
-        <a href="events.html">EVENTS</a>
-        <a href="exhibitions.html">EXHIBITONS</a>
-        <a id="active" href="visit.html">VISIT</a>
-        <a href="involved.html">GET INVOLVED</a>
-        <a href="about.html">ABOUT US</a>
-      </div>
-    </nav>
+  <!-- NAVIGATION: ------------------------------------------------------------------------->
+  <nav class="nav">
+    <a class="nav__img--logo" href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
+    <div class="nav__block--hamburger-icon" onclick="mobileMenuToggle()">
+      <div class="line-1"></div>
+      <div class="line-2"></div>
+      <div class="line-3"></div>
+    </div>
+    <div class="nav__block--menu">
+      <a href="index.html">HOME</a
+      ><a href="events.html">EVENTS</a
+      ><a href="exhibitions.html">EXHIBITONS</a
+      ><a id="active" href="visit.html">VISIT</a
+      ><a href="involved.html">GET INVOLVED</a
+      ><a href="about.html">ABOUT US</a>
+    </div>
+  </nav>
+  <!---------------------------------------------------------------------------------------->
+
 <!-- HEADER: ----------------------------------------------------------------------------->
     <header class="grey-background">
       <h1>Visit Us</h1>
@@ -217,6 +222,8 @@
         <p class="main__section__p">&copy; 2019 Community Science Museum - All rights reserved</p>
       </div>
     </footer>
+
+    <script src="js/mobile-menu.js"></script>
 <!-- END: --------------------------------------------------------------------------------->
   </body>
 </html>
