Rezing and renaming images

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         support us
       </button></a>
     </div>
-    <img class="section__img--cta" src="images/pages/home/test4.png" alt="">
+    <img class="section__img--cta" src="images/pages/home/cta--illustration.png" alt="Tour Guide Illustration">
   </section>
 
   <!-- Text Content -->
