--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
   <!---------------------------------------------------------------------------------------->
 
   <!-- HEADER: ----------------------------------------------------------------------------->
-  <header class="grey-background">
+  <header class="grey-background header">
     <h1>Events</h1>
   </header>
   <!---------------------------------------------------------------------------------------->
