--- a/exhibitions.html
+++ b/exhibitions.html
@@ -39,7 +39,7 @@
   <!---------------------------------------------------------------------------------------->
 
 <!-- HEADER: ----------------------------------------------------------------------------->
-    <header class="grey-background">
+    <header class="grey-background header">
       <h1>Exhibitions</h1>
     </header>
 <!-- MAIN: ------------------------------------------------------------------------------->
