--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
   <!-- HEADER: ----------------------------------------------------------------------------->
-  <header class="header header--home">
+  <header class="header--home">
     <div class="header__block">
       <h1 class="header__block__h1">community science museum</h1>
     </div>
