--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   <!---------------------------------------------------------------------------------------->
 
 <!-- HEADER: ----------------------------------------------------------------------------->
-    <header class="grey-background">
+    <header class="grey-background header">
       <h1>About Us</h1>
     </header>
 <!-- MAIN: ------------------------------------------------------------------------------->
