--- a/involved.html
+++ b/involved.html
@@ -37,7 +37,7 @@
   <!---------------------------------------------------------------------------------------->
 
 <!-- HEADER: ----------------------------------------------------------------------------->
-    <header class="grey-background">
+    <header class="grey-background header">
       <h1>Get Involved</h1>
     </header>
 <!-- MAIN: ------------------------------------------------------------------------------->
