--- a/visit.html
+++ b/visit.html
@@ -38,7 +38,7 @@
   <!---------------------------------------------------------------------------------------->
 
 <!-- HEADER: ----------------------------------------------------------------------------->
-    <header class="grey-background">
+    <header class="grey-background header">
       <h1>Visit Us</h1>
     </header>
 <!-- MAIN: ------------------------------------------------------------------------------->
