Font sizes + WS
Changing font sizes and removing whitespace, adding notes to the code

--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
   <!-- CTA: -->
   <section class="section--cta"> 
     <div class="section__block--cta">
-      <h2>OPEN 6 DAYS A WEEK</h2>
+      <h2 class="section__block__h2--cta">OPEN 6 DAYS A WEEK</h2>
       <a href="visit.html"><button class="button">
           plan a visit
       </button></a>
     </div>
     <div class="section__block--cta">
-      <h2>EXCITING EVENTS</h2>
+      <h2 class="section__block__h2--cta">EXCITING EVENTS</h2>
       <a href="visit.html"><button class="button">
         check out
       </button></a>
     </div>
     <div class="section__block--cta">
-      <h2>EXTRAORDINARY EXHIBITIONS</h2>
+      <h2 class="section__block__h2--cta">EXTRAORDINARY EXHIBITIONS</h2>
       <a href="visit.html"><button class="button">
           learn more
       </button></a>
     </div>
     <div class="section__block--cta">
-      <h2>FREE ENTRY - SUPPORT US</h2>
+      <h2 class="section__block__h2--cta">FREE ENTRY - SUPPORT US</h2>
       <a href="visit.html"><button class="button">
         support us
       </button></a>
