CTA modification and copywriting
Trying to write a better landinpage with a compelling CTA section to presuade the user to visit the museum

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <!-- Page title: -->
   <title>Community Science Museum</title>
 
+  <!-- Font Awesome: -->
+  <script src="https://kit.fontawesome.com/f0fe9be787.js" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
   <!-- NAVIGATION: ------------------------------------------------------------------------->
@@ -40,8 +44,15 @@
 
   <!-- HEADER: ----------------------------------------------------------------------------->
   <header class="header--home">
-    <div class="header__block">
-      <h1 class="header__block__h1">community science museum</h1>
+    <div class="header__block--home">
+      <h1 class="header__h1--home">community science museum</h1>
+      <h2 class="header__h2--home">Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h2>
+      <a href="">
+        <button class="button button--cta--header">
+          <i class="fas fa-map-marker-alt"></i> 
+          visit us
+        </button>
+      </a>
     </div>
   </header>
   <!---------------------------------------------------------------------------------------->
@@ -50,31 +61,35 @@
   <!-- MAIN CONTENT: ------------------------------------------------------------------------->
   <!-- CTA: -->
   <section class="section--cta"> 
-    <div class="section__block--cta">
+    <!-- <div class="section__block--cta">
       <h2 class="section__block__h2--cta">OPEN 6 DAYS A WEEK</h2>
-      <a href="visit.html"><button class="button">
+      <a href="visit.html"><button class="button button--fill--pink">
+          <i class="fas fa-map-marker-alt"></i> 
           plan a visit
       </button></a>
-    </div>
+    </div> -->
     <div class="section__block--cta">
       <h2 class="section__block__h2--cta">EXCITING EVENTS</h2>
-      <a href="visit.html"><button class="button">
+      <a href="visit.html"><button class="button button--fill--pink">
+        <i class="far fa-calendar-alt"></i> 
         check out
       </button></a>
     </div>
     <div class="section__block--cta">
       <h2 class="section__block__h2--cta">EXTRAORDINARY EXHIBITIONS</h2>
-      <a href="visit.html"><button class="button">
+      <a href="visit.html"><button class="button button--fill--pink">
+          <i class="fas fa-landmark"></i> 
           learn more
       </button></a>
     </div>
     <div class="section__block--cta">
       <h2 class="section__block__h2--cta">FREE ENTRY - SUPPORT US</h2>
-      <a href="visit.html"><button class="button">
+      <a href="visit.html"><button class="button button--fill--pink">
+        <i class="fas fa-coins"></i> 
         support us
       </button></a>
     </div>
-    <img class="section__img--cta" src="images/pages/home/cta--illustration.png" alt="Tour Guide Illustration">
+    <!-- <img class="section__img--cta" src="images/pages/home/cta--illustration.png" alt="Tour Guide Illustration"> -->
   </section>
 
   <!-- Text Content -->
