--- a/involved.html
+++ b/involved.html
@@ -19,19 +19,21 @@
 <body>
   <!-- NAVIGATION: ------------------------------------------------------------------------->
   <nav class="nav">
-    <a class="nav__img--logo" href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
-    <div class="nav__block--hamburger-icon" onclick="mobileMenuToggle()">
-      <div class="line-1"></div>
-      <div class="line-2"></div>
-      <div class="line-3"></div>
-    </div>
-    <div class="nav__block--menu">
-      <a id="active" href="index.html">HOME</a
-      ><a href="events.html">EVENTS</a
-      ><a href="exhibitions.html">EXHIBITONS</a
-      ><a href="visit.html">VISIT</a
-      ><a id="active" href="involved.html">GET INVOLVED</a
-      ><a href="about.html">ABOUT US</a>
+    <div class="nav__block">
+      <a class="nav__img--logo" href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
+      <div class="nav__block--hamburger-icon" onclick="mobileMenuToggle()">
+        <div class="line-1"></div>
+        <div class="line-2"></div>
+        <div class="line-3"></div>
+      </div>
+      <div class="nav__block--menu">
+        <a href="index.html">HOME</a
+        ><a href="events.html">EVENTS</a
+        ><a href="exhibitions.html">EXHIBITONS</a
+        ><a href="visit.html">VISIT</a
+        ><a id="active" href="involved.html">GET INVOLVED</a
+        ><a href="about.html">ABOUT US</a>
+      </div>
     </div>
   </nav>
   <!---------------------------------------------------------------------------------------->
@@ -55,7 +57,7 @@
         </p>
 
         <a class="link" href="https://www.paypal.com/community-science-museum">
-          <button class="button--pink margin-bottom">
+          <button class="button button--fill--pink margin-bottom">
             donate money
           </button>
         </a>
@@ -71,7 +73,7 @@
         </p>
 
         <a href="mailto: abc@example.com">
-          <button class="button--pink">
+          <button class="button button--fill--pink">
             donate items
           </button>
         </a>
@@ -96,7 +98,7 @@
             us if you’d like to find out more about how you can get involved.
           </p>
           <a href="mailto: abc@example.com">
-            <button class="button--pink">
+            <button class="button button--fill--pink">
               volunteer
             </button>
             
@@ -119,7 +121,7 @@
             are passionate about science and sharing it with the wider community.
           </p>
           <a href="mailto: abc@example.com">
-            <button class="button--pink">
+            <button class="button button--fill--pink">
               internship
             </button>
           </a>
