--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
 <body>
   <!-- NAVIGATION: ------------------------------------------------------------------------->
   <nav class="nav">
-    <a class="nav__img--logo" href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
-    <div class="nav__block--hamburger-icon" onclick="mobileMenuToggle()">
-      <div class="line-1"></div>
-      <div class="line-2"></div>
-      <div class="line-3"></div>
-    </div>
-    <div class="nav__block--menu">
-      <a id="active" href="index.html">HOME</a
-      ><a href="events.html">EVENTS</a
-      ><a href="exhibitions.html">EXHIBITONS</a
-      ><a href="visit.html">VISIT</a
-      ><a href="involved.html">GET INVOLVED</a
-      ><a href="about.html">ABOUT US</a>
+    <div class="nav__block">
+      <a class="nav__img--logo" href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
+      <div class="nav__block--hamburger-icon" onclick="mobileMenuToggle()">
+        <div class="line-1"></div>
+        <div class="line-2"></div>
+        <div class="line-3"></div>
+      </div>
+      <div class="nav__block--menu">
+        <a  href="index.html">HOME</a
+        ><a href="events.html">EVENTS</a
+        ><a href="exhibitions.html">EXHIBITONS</a
+        ><a href="visit.html">VISIT</a
+        ><a href="involved.html">GET INVOLVED</a
+        ><a href="about.html">ABOUT US</a>
+      </div>
     </div>
   </nav>
   <!---------------------------------------------------------------------------------------->
@@ -45,9 +47,11 @@
   <!-- HEADER: ----------------------------------------------------------------------------->
   <header class="header--home">
     <div class="header__block--home">
-      <h1 class="header__h1--home">community science museum</h1>
+      <h1 class="header__h1--home">explore, learn and master</h1>
+      <!-- <h1 class="header__h1--home">learn</h1>
+      <h1 class="header__h1--home">master</h1> -->
       <h2 class="header__h2--home">Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h2>
-      <a href="">
+      <a href="visit.html">
         <button class="button button--cta--header">
           <i class="fas fa-map-marker-alt"></i> 
           visit us
@@ -61,30 +65,23 @@
   <!-- MAIN CONTENT: ------------------------------------------------------------------------->
   <!-- CTA: -->
   <section class="section--cta"> 
-    <!-- <div class="section__block--cta">
-      <h2 class="section__block__h2--cta">OPEN 6 DAYS A WEEK</h2>
-      <a href="visit.html"><button class="button button--fill--pink">
-          <i class="fas fa-map-marker-alt"></i> 
-          plan a visit
-      </button></a>
-    </div> -->
     <div class="section__block--cta">
       <h2 class="section__block__h2--cta">EXCITING EVENTS</h2>
-      <a href="visit.html"><button class="button button--fill--pink">
+      <a href="events.html"><button class="button button--fill--pink">
         <i class="far fa-calendar-alt"></i> 
         check out
       </button></a>
     </div>
     <div class="section__block--cta">
-      <h2 class="section__block__h2--cta">EXTRAORDINARY EXHIBITIONS</h2>
-      <a href="visit.html"><button class="button button--fill--pink">
+      <h2 class="section__block__h2--cta">AMAZING EXHIBITIONS</h2>
+      <a href="exhibitions.html"><button class="button button--fill--pink">
           <i class="fas fa-landmark"></i> 
           learn more
       </button></a>
     </div>
     <div class="section__block--cta">
-      <h2 class="section__block__h2--cta">FREE ENTRY - SUPPORT US</h2>
-      <a href="visit.html"><button class="button button--fill--pink">
+      <h2 class="section__block__h2--cta">FREE ENTRY</h2>
+      <a href="involved.html"><button class="button button--fill--pink">
         <i class="fas fa-coins"></i> 
         support us
       </button></a>
