--- a/visit.html
+++ b/visit.html
@@ -20,19 +20,21 @@
   <body>
   <!-- NAVIGATION: ------------------------------------------------------------------------->
   <nav class="nav">
-    <a class="nav__img--logo" href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
-    <div class="nav__block--hamburger-icon" onclick="mobileMenuToggle()">
-      <div class="line-1"></div>
-      <div class="line-2"></div>
-      <div class="line-3"></div>
-    </div>
-    <div class="nav__block--menu">
-      <a href="index.html">HOME</a
-      ><a href="events.html">EVENTS</a
-      ><a href="exhibitions.html">EXHIBITONS</a
-      ><a id="active" href="visit.html">VISIT</a
-      ><a href="involved.html">GET INVOLVED</a
-      ><a href="about.html">ABOUT US</a>
+    <div class="nav__block">
+      <a class="nav__img--logo" href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
+      <div class="nav__block--hamburger-icon" onclick="mobileMenuToggle()">
+        <div class="line-1"></div>
+        <div class="line-2"></div>
+        <div class="line-3"></div>
+      </div>
+      <div class="nav__block--menu">
+        <a href="index.html">HOME</a
+        ><a href="events.html">EVENTS</a
+        ><a href="exhibitions.html">EXHIBITONS</a
+        ><a id="active" href="visit.html">VISIT</a
+        ><a href="involved.html">GET INVOLVED</a
+        ><a href="about.html">ABOUT US</a>
+      </div>
     </div>
   </nav>
   <!---------------------------------------------------------------------------------------->
