Padding fix on headline

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- HEADER: ----------------------------------------------------------------------------->
   <header class="header--home">
     <div class="header__block--home">
-      <h1 class="header__h1--home">explore, learn and master</h1>
+      <h1 class="header__h1--home">explore, learn & master</h1>
       <!-- <h1 class="header__h1--home">learn</h1>
       <h1 class="header__h1--home">master</h1> -->
       <h2 class="header__h2--home">Come join us at the Community Science Museum where we’re committed to making science accessible to all.</h2>
